fix: cookie-consent disabled, fix: if restaurant has banner, restaurant-name not visible

--- a/src/FoodOrderSystem.App/ClientApp/src/app/order-restaurant/order-restaurant.component.css
+++ b/src/FoodOrderSystem.App/ClientApp/src/app/order-restaurant/order-restaurant.component.css
@@ -1,3 +1,11 @@
+.hasrestaurantbanner::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0,0,0,.25),rgba(0,0,0,.25));
+}
+
 #checkout {
     background-color: #DECF80;
     background-image: url('../../assets/images/rough/yellow.png');
